--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.3.0",
     "env-var": "7.5.0",
+    "jq": "^1.7.2",
+    "node-jq": "^6.0.0",
     "source-map-support": "^0.5.21"
   }
 }
